updated changes for bob

--- a/Branches.html
+++ b/Branches.html
@@ -29,4 +29,4 @@ git branch <branch>, create a new branch called <branch>. This does not check ou
         encounter a merge conflict, run the git status command shows you which files needs to be 
         resolved. -->
     
-    <!-- a new change for Bob -->
+    <!-- a new change for Bob. Second change made by Bob -->
